# catan-sheets

./: .gitignore  README.md  pyproject.toml  schema.json
catan/: main.py  sheets.py
catan-sheets/: colonist.py  db.py  main.py  shared.py  sheets.py  trivia.py  twosheep.py
